# hopers-contracts

./: Cargo.toml  README.md
contracts/cw20-base/: Cargo.toml
contracts/cw20-base/schema/: cw20-base.json
contracts/cw20-base/schema/raw/: execute.json  instantiate.json  query.json  response_to_all_spender_allowances.json  response_to_download_logo.json
contracts/cw20-base/src/: msg.rs
contracts/hopers-staking/: Cargo.toml  README.md
contracts/hopers-staking/examples/: schema.rs
contracts/hopers-staking/schema/: hopers_staking.json
contracts/hopers-staking/schema/raw/: execute.json  instantiate.json  query.json  response_to_all_stakers.json  response_to_config.json  response_to_staker_info.json  (+2 more)
contracts/hopers-staking/src/: contract.rs  error.rs  lib.rs  msg.rs  query.rs  state.rs  unit_tests.rs
contracts/hopers-swap(hopers-others)/: Cargo.toml  README.md
contracts/hopers-swap(hopers-others)/src/: integration_test.rs  msg.rs
contracts/hopers-swap(others)/: README.md
contracts/hopers-swap(others)/src/: contract.rs  msg.rs  state.rs
contracts/hopers-swap_hopers/: Cargo.toml
contracts/hopers-swap_hopers/examples/: schema.rs
contracts/hopers-swap_hopers/schema/: hopers_swap_hopers.json
contracts/hopers-swap_hopers/src/: contract.rs  integration_test.rs  msg.rs  state.rs
contracts/hopers-swap_orders/: Cargo.toml
contracts/hopers-swap_orders/examples/: schema.rs
contracts/hopers-swap_orders/schema/: hopers_swap_orders.json
contracts/hopers-swap_orders/src/: contract.rs  error.rs  integration_test.rs  msg.rs  state.rs
(+10 files in other folders)
