[package]
name = "hopers_swap"
version = "1.1.2-beta"
authors = ["VenusDev0725 <venus07250000@gmail.com>"]
edition = "2018"
description = "Cosmwasm AMM"
license = "Apache-2.0"
repository = "https://github.com/VenusDev0725/HopersSwap"


[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]


[dependencies]
cw0 = {  version = "0.10.0" }
cw2 = { version = "0.11" }
cw20 = { version = "0.10.0" }
cw20-base = { version = "0.10.0", features = ["library"] }
cosmwasm-std = { version = "1.0.0-beta" }
cosmwasm-storage = { version = "1.0.0-beta" }
cw-storage-plus = "0.10"
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta" }
cw-multi-test = {  version = "0.10.3" }
